--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>WorkOut Roberto</title>
+  <link rel="apple-touch-icon" href="icon.png">
   <style>
     :root { --safe-bottom: env(safe-area-inset-bottom); --blue: #3b82f6; }
     * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
@@ -130,3 +131,4 @@ function upImg(e) {
 </script>
 </body>
 </html>
+
