--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Allenamento">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="icon.png">
+  <link rel="icon" type="image/png" href="icon.png">
   <title>Allenamento Roberto</title>
   <style>
     * {
@@ -412,7 +417,7 @@
 </head>
 <body>
 
-<input type="file" id="photoInput" accept="image/*" capture="environment">
+<input type="file" id="photoInput" accept="image/*">
 
 <div class="screen active home-screen" id="homeScreen">
   <div class="home-title">
