--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@ const workoutData = {
   C: [
     {
       nome: "Spinte con Manubri su Panca Inclinata",
-      serie: "3 x 6/9",
+      serie: "3 x 9",
       recupero: "3\"",
       note: "Gomiti e polsi a 45 gradi, max allungamento",
       carico: "9(9-9-9)",
@@ -675,20 +675,20 @@ const workoutData = {
     },
     {
       nome: "Vertical Traction",
-      serie: "2 x 7/9",
+      serie: "2 x 12",
       recupero: "2\"",
       note: "Avambraccio perpendicolare al terreno",
-      carico: "35(12) 40(9)",
+      carico: "35",
       tipo: "macchina",
       macchina: "Lat Machine Technogym",
       id: "C_1"
     },
     {
       nome: "Low Row",
-      serie: "2 x 7/9",
+      serie: "2 x 10",
       recupero: "2\"",
       note: "Adduzione scapolare",
-      carico: "35(10) 45(10)",
+      carico: "45",
       tipo: "macchina",
       macchina: "Low Row Technogym",
       id: "C_2"
