--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
       font-size: 1.8rem;
       font-weight: bold;
       margin-bottom: 0.3rem;
+      white-space: normal;
+      word-wrap: break-word;
+      line-height: 1.2;
     }
     
     .machine-name {
@@ -325,6 +328,10 @@
       font-weight: bold;
       width: 100%;
       margin-bottom: 0.3rem;
+      white-space: normal;
+      word-wrap: break-word;
+      line-height: 1.2;
+      min-height: 2.5rem;
     }
     
     .editable-cell input {
@@ -456,7 +463,7 @@
   </div>
 </div>
 
-<input type="file" id="photoInput" accept="image/*" capture="environment" style="display: none;">
+<input type="file" id="photoInput" accept="image/*" style="display: none;">
 
 <script>
 const workoutData = {
