--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@ function exportData() {
   URL.revokeObjectURL(url);
   
   // Show confirmation
-  alert('✅ Dati esportati con successo!\nIl file è stato salvato in Download.');
+  alert('✅ Dati esportati con successo!\n\niPhone: Tocca "Altro..." poi "Salva su File"\nAndroid: Salvato in Download');
   closeBackupModal();
 }
 
