--- a/index.html
+++ b/index.html
@@ -594,6 +594,8 @@
   </div>
 </div>
 
+<input type="file" id="photoInput" accept="image/*" style="display: none;">
+
 <script>
 const workoutData = {
   A: [
@@ -869,6 +871,8 @@ let currentDay = null;
 let currentExercise = 0;
 let editMode = false;
 let editedData = {};
+let currentPhotoExerciseId = null;
+let photoInputHandler = null;
 
 // Photo management
 function getPhotoKey(exerciseId) {
@@ -937,30 +941,40 @@ function saveCurrentExercise() {
 }
 
 function handlePhotoClick(exerciseId) {
-  // Create a fresh input element each time (iOS Safari fix)
-  const input = document.createElement('input');
-  input.type = 'file';
-  input.accept = 'image/*';
-  input.style.display = 'none';
+  const photoInput = document.getElementById('photoInput');
   
-  // Handle file selection
-  input.addEventListener('change', function(e) {
+  // Remove previous event listener if exists
+  if (photoInputHandler) {
+    photoInput.removeEventListener('change', photoInputHandler);
+  }
+  
+  // Reset input completely (critical for iOS)
+  photoInput.value = '';
+  photoInput.type = 'text';
+  photoInput.type = 'file';
+  
+  // Store the exercise ID
+  currentPhotoExerciseId = exerciseId;
+  
+  // Create new handler
+  photoInputHandler = function(e) {
     const file = e.target.files[0];
-    if (file) {
+    if (file && currentPhotoExerciseId) {
       const reader = new FileReader();
       reader.onload = function(event) {
-        savePhoto(exerciseId, event.target.result);
+        savePhoto(currentPhotoExerciseId, event.target.result);
+        currentPhotoExerciseId = null;
         updateExerciseScreen();
       };
       reader.readAsDataURL(file);
     }
-    // Clean up
-    document.body.removeChild(input);
-  });
+  };
   
-  // Add to DOM and trigger click
-  document.body.appendChild(input);
-  input.click();
+  // Add event listener
+  photoInput.addEventListener('change', photoInputHandler);
+  
+  // Trigger file picker
+  photoInput.click();
 }
 
 // Backup/Restore Modal
@@ -1294,4 +1308,3 @@ function handleSwipe() {
 
 </body>
 </html>
-
